<resources>
    <string name="app_name">RolRoys</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Kenya</string>
    <string name="nav_header_subtitle">Mkenya Will always be Mkenya</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>
    <string name="menu_home">Lotto</string>
    <string name="menu_gallery">Pick Numbers</string>
    <string name="menu_slideshow">Redeeme Rewards</string>
    <string name="menu_tools">Redeeme Cash</string>
    <string name="menu_share">Raffle Tickets</string>
    <string name="menu_send">Call Us</string>
    <string name="textView">HAPPY PLAYING</string>
    <string name="tvWelcome">WELCOME TO rolRoys</string>
    <string name="tvWelcome_2">Watch Play and Win</string>
    <string name="tvCoinAdd">Add</string>
    <string name="tvCoinMinus">Ded</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_text"> </string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="num_10">10</string>
    <string name="num_11">11</string>
    <string name="num_12">12</string>
    <string name="num_13">13</string>
    <string name="num_14">14</string>
    <string name="num_15">15</string>
    <string name="num_16">16</string>
    <string name="num_17">17</string>
    <string name="num_18">18</string>
    <string name="num_19">19</string>
    <string name="num_20">20</string>
    <string name="num_21">21</string>
    <string name="num_22">22</string>
    <string name="num_23">23</string>
    <string name="num_24">24</string>
    <string name="num_25">25</string>
    <string name="num_26">26</string>
    <string name="num_27">27</string>
    <string name="num_28">28</string>
    <string name="num_29">29</string>
    <string name="num_30">30</string>
    <string name="num_31">31</string>
    <string name="num_32">32</string>
    <string name="num_33">33</string>
    <string name="num_34">34</string>
    <string name="num_35">35</string>
    <string name="num_36">36</string>
    <string name="num_37">37</string>
    <string name="num_38">38</string>
    <string name="num_39">39</string>
    <string name="num_40">40</string>
    <string name="num_41">41</string>
    <string name="num_42">42</string>
    <string name="num_43">43</string>
    <string name="num_44">44</string>
    <string name="num_45">45</string>
    <string name="num_46">46</string>
    <string name="num_47">47</string>
    <string name="num_48">48</string>
    <string name="num_49">49</string>
    <string name="title_activity_pic_one">Pick 5 Random Numbers</string>
    <string name="majina">Pick 5 Random Numbers</string>
    <string name="majina2">Pick your 5 Lucky Numbers, then wait 30 minutes for the draw</string>
    <string name="app_menu">Find Out More</string>
    <string name="txView">Check Your Points</string>
    <string name="app_menuOne">Spin</string>
    <string name="app_menutwo">Find Out More</string>
    <string name="app_menuthree">Buy Points</string>
    <string name="app_menuFour">Add Players</string>
    <string name="app_menuFive">Redeme Points</string>
    <string name="title_activity_flyers">FlyersActivity</string>
    <string name="tab_text_1">Featured</string>
    <string name="tab_text_2">Latest</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_advert">AdvertActivity</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Featured Down</string>
    <string name="next_level">Latest Down </string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_add">Daily Advertisement</string>
    <string name="spin">spin</string>
    <string name="pop">Pop</string>
    <string name="title_activity_pop_up1">You Can Always Try Again</string>
    <string name="title_activity_pop_up2">You Are almost There</string>
    <string name="lucy">Choose your LUCKY Number and WIN!!</string>
    <string name="rolroys">~rolRoys~</string>
    <string name="welcome">Welcome to</string>
</resources>