<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLay0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/WhiteSmoke">

    <LinearLayout
        android:id="@+id/display_screen"

        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">


        <TextView
            android:id="@+id/display"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/tvround"
            android:cursorVisible="true"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/icons"
            android:textSize="20sp"
            android:weightSum="5" />

        <TextView
            android:id="@+id/display1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/tvround"
            android:cursorVisible="true"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/icons"
            android:textSize="20sp"
            android:weightSum="5" />

        <TextView
            android:id="@+id/display2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/tvround"
            android:cursorVisible="true"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/icons"
            android:textSize="20sp"
            android:weightSum="5" />

        <TextView
            android:id="@+id/display3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/tvround"
            android:cursorVisible="true"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/icons"
            android:textSize="20sp"
            android:weightSum="5" />

        <TextView
            android:id="@+id/display4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/tvround"
            android:cursorVisible="true"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/icons"
            android:textSize="20sp"
            android:weightSum="5" />

    </LinearLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_weight="0"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/num_0"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0" />
        <Button
            android:id="@+id/num_1"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1" />
        <Button
            android:id="@+id/num_2"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_2" />
        <Button
            android:id="@+id/num_3"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_3" />
        <Button
            android:id="@+id/num_4"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_4" />
        <Button
            android:id="@+id/num_5"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_5" />

        <Button
            android:id="@+id/num_6"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_6" />
        <Button
            android:id="@+id/num_7"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_7" />
        <Button
            android:id="@+id/num_8"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_8" />
        <Button
            android:id="@+id/num_9"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_9" />

    </LinearLayout>

    <!--Another Row here-->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_weight="0"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/num_10"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_10" />
        <Button
            android:id="@+id/num_11"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_11" />

        <Button
            android:id="@+id/num_12"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_12" />
        <Button
            android:id="@+id/num_13"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_13" />
        <Button
            android:id="@+id/num_14"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_14" />
        <Button
            android:id="@+id/num_15"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_15" />
        <Button
            android:id="@+id/num_16"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_16" />
        <Button
            android:id="@+id/num_17"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_17" />

        <Button
            android:id="@+id/num_18"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_18" />
        <Button
            android:id="@+id/num_19"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_19" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_weight="0"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/num_20"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_20" />
        <Button
            android:id="@+id/num_21"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_21" />
        <Button
            android:id="@+id/num_22"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_22" />
        <Button
            android:id="@+id/num_23"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_23" />

        <Button
            android:id="@+id/num_24"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_24" />
        <Button
            android:id="@+id/num_25"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_25" />
        <Button
            android:id="@+id/num_26"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_26" />
        <Button
            android:id="@+id/num_27"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_27" />
        <Button
            android:id="@+id/num_28"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_28" />
        <Button
            android:id="@+id/num_29"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_29" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_weight="0"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/num_30"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_30" />
        <Button
            android:id="@+id/num_31"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_31" />
        <Button
            android:id="@+id/num_32"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_32" />
        <Button
            android:id="@+id/num_33"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_33" />
        <Button
            android:id="@+id/num_34"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_34" />
        <Button
            android:id="@+id/num_35"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_35" />
        <Button
            android:id="@+id/num_36"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_36" />
        <Button
            android:id="@+id/num_37"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_37" />
        <Button
            android:id="@+id/num_38"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_38" />
        <Button
            android:id="@+id/num_39"
            android:background="@drawable/lottoround"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/num_39" />

    </LinearLayout>
    <!--Another Row here-->
    <LinearLayout
        android:id="@+id/bot_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Purple"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="8dp"
            android:text="@string/majina2"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="italic"
            android:textColor="@color/WhiteSmoke" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/Purple"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/coin" />
    </LinearLayout>
</LinearLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
    <!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".LottoActivity">-->

    <!--</androidx.constraintlayout.widget.ConstraintLayout>-->